# XPBD

./: .gitignore  README.md  pyproject.toml
examples/: benchmark.py  cloth_drop.py  hanging_chain.py  smoke_test.py  viewer.py  viewer_6dof.py
src/xpbd3d/: __init__.py  coloring.py  kernels.py  kernels_6dof.py  kernels_bvh.py  kernels_hashgrid.py  scene.py  solver.py  solver_6dof.py
tests/: test_solver.py  test_solver_6dof.py
