[project]
name = "xpbd3d"
version = "0.1.0"
description = "3D Extended Position-Based Dynamics (XPBD) solver in NVIDIA Warp, with a viser browser demo"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "viser>=1.0.0",
    "warp-lang>=1.6.0",
    "trimesh>=4.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xpbd3d"]

[dependency-groups]
dev = [
    "pillow>=10.0.0",
    "pytest>=8.0.0",
]
